syntax = "proto3";

option go_package = "./proto";


package trade;

service Trade {
  rpc GetUserProfile (GetUserProfileRequest) returns (GetUserProfileResponse) {}
  rpc FinishTrade (FinishTradeRequest) returns (FinishTradeResponse) {}
}

message GetUserProfileRequest {
  uint64 id = 1;
}

message TradeItem {
  string id = 1;
  int32 type = 2;
  uint64 user_id = 3;
}

message FinishTradeRequest {
  uint64 author_id = 1;
  uint64 other_id = 2;
  repeated TradeItem items = 3;
}

message Rooster {
  string id = 1;
  uint64 user_id = 2;
  string origin = 3;
  int32 type = 4;
  bool special = 5;
}

message Item {
  string id = 1;
  uint64 user_id = 2;
  int32 quantity = 3;
  int32 item_id = 4;
  int32 type = 5;
}

message GetUserProfileResponse {
  uint64 id = 1;
  repeated Rooster roosters = 2;
  repeated Item items = 3; 
}

message FinishTradeResponse {
  bool ok = 1;
  optional string error = 2;
}